[tool.poetry]
name = "basic_python"
version = "0.1.0"
description = "Python project template with needed DevOps tools"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.4"
ipython = "^7.11.1"
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
