[tool.poetry]
name = "simple_fastapi"
version = "0.1.0"
description = "Basic FastAPI template with SQLAlchemy and Alembic"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
alembic = "^1.18.4"
certifi = "^2026.2.25"
fastapi = "^0.135.3"
gunicorn = "^25.3.0"
h11 = "^0.16.0"
idna = "^3.11"
jinja2 = "^3.1.6"
mako = "^1.3.12"
pygments = "^2.20.0"
prometheus-client = "^0.23.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.12.5"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
sentry-sdk = "^2.57.0"
sqlalchemy = "^2.0.49"
urllib3 = "^2.7.0"
uvicorn = "^0.44.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.7"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
